Bug 1706633 - disable browser_storage_fission_local_storage.js on linux debug r=intermittent-reviewers,bhearsum DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122977

UltraBlame original commit: 52aa0e9a1fccd3b028b24affb07ab6496467c537

--- a/devtools/client/storage/test/browser.ini
+++ b/devtools/client/storage/test/browser.ini
@@ -455,6 +455,28 @@ browser_storage_fission_local_storage
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+&
+&
+bits
+=
+=
+64
+&
+&
+debug
+#
+Bug
+1706633
 [
 browser_storage_fission_session_storage
 .
