Bug 1726064 - part 13: Make `AutoEmptyBlockAncestorDeleter::ScanEmptyBlockInclusiveAncestor()` use `HTMLEditUtils::Get(Inclusive)AncestorElement()` r=m_kato
Additionally, the given content may be in a nested editing host.  Then, this
method may delete a nested-block editing host if it's empty.  Therefore,
this patch get rid of `aEditingHost` and check same thing with
`HTMLEditUtils::IsRemovableFromParentNode()`.

Depends on D123066

Differential Revision: https://phabricator.services.mozilla.com/D123067

UltraBlame original commit: 30478b345a7e1a0bfab8c20dcc9a8784efb36a79

--- a/testing/web-platform/meta/editing/run/forwarddelete.html.ini
+++ b/testing/web-platform/meta/editing/run/forwarddelete.html.ini
@@ -10322,3 +10322,63 @@ innerHTML
 expected
 :
 FAIL
+[
+[
+[
+"
+forwarddelete
+"
+"
+"
+\
+]
+\
+]
+"
+<
+div
+>
+<
+div
+contenteditable
+=
+false
+>
+<
+span
+contenteditable
+>
+{
+}
+<
+br
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+"
+:
+execCommand
+(
+"
+forwarddelete
+"
+false
+"
+"
+)
+return
+value
+]
+expected
+:
+FAIL
