Bug 1726064 - part 17: Make `HTMLEditor::FormatBlockContainerWithTransaction()` use `HTMLEditUtils::GetInclusiveAncestorElement()` r=m_kato
Depends on D123070

Differential Revision: https://phabricator.services.mozilla.com/D123071

UltraBlame original commit: 35c243277dad0426743237811393c556585d106a

--- a/testing/web-platform/meta/editing/run/formatblock.html.ini
+++ b/testing/web-platform/meta/editing/run/formatblock.html.ini
@@ -15248,3 +15248,278 @@ before
 expected
 :
 FAIL
+[
+[
+[
+"
+formatblock
+"
+"
+p
+"
+\
+]
+\
+]
+"
+<
+div
+>
+<
+p
+contenteditable
+=
+false
+>
+<
+span
+contenteditable
+>
+[
+foo
+\
+]
+<
+/
+span
+>
+<
+/
+p
+>
+<
+/
+div
+>
+"
+queryCommandValue
+(
+"
+formatblock
+"
+)
+before
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+formatblock
+"
+"
+p
+"
+\
+]
+\
+]
+"
+<
+div
+>
+<
+p
+contenteditable
+=
+false
+>
+<
+span
+contenteditable
+>
+[
+foo
+\
+]
+<
+/
+span
+>
+<
+/
+p
+>
+<
+/
+div
+>
+"
+queryCommandValue
+(
+"
+formatblock
+"
+)
+after
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+formatblock
+"
+"
+div
+"
+\
+]
+\
+]
+"
+<
+div
+>
+<
+div
+contenteditable
+=
+false
+>
+<
+p
+contenteditable
+>
+[
+foo
+\
+]
+<
+/
+p
+>
+<
+/
+div
+>
+<
+/
+div
+>
+"
+queryCommandValue
+(
+"
+formatblock
+"
+)
+before
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+formatblock
+"
+"
+div
+"
+\
+]
+\
+]
+"
+<
+div
+>
+<
+div
+contenteditable
+=
+false
+>
+<
+p
+contenteditable
+>
+[
+foo
+\
+]
+<
+/
+p
+>
+<
+/
+div
+>
+<
+/
+div
+>
+"
+queryCommandValue
+(
+"
+formatblock
+"
+)
+after
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+formatblock
+"
+"
+div
+"
+\
+]
+\
+]
+"
+<
+div
+>
+<
+div
+contenteditable
+=
+false
+>
+<
+div
+contenteditable
+>
+[
+foo
+\
+]
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+"
+queryCommandValue
+(
+"
+formatblock
+"
+)
+after
+]
+expected
+:
+FAIL
