Bug 1726064 - part 20: Make `HTMLEditor::RemoveBlockContainerElements()` use `HTMLEditUtils::GetAncestorElement()` r=m_kato
Depends on D123073

Differential Revision: https://phabricator.services.mozilla.com/D123074

UltraBlame original commit: 54ef3dd91e3dade2ac26a94638027ff9bfc0274b

--- a/editor/libeditor/tests/mochitest.ini
+++ b/editor/libeditor/tests/mochitest.ini
@@ -1326,6 +1326,11 @@ test_cmd_fontFace_with_tt
 html
 ]
 [
+test_cmd_paragraphState
+.
+html
+]
+[
 test_composition_event_created_in_chrome
 .
 html
