--- a/tools/profiler/tests/browser/browser.ini
+++ b/tools/profiler/tests/browser/browser.ini
@@ -134,6 +134,21 @@ simple
 .
 html
 [
+browser_test_marker_network_cancel
+.
+js
+]
+https_first_disabled
+=
+true
+support
+-
+files
+=
+simple
+.
+html
+[
 browser_test_marker_network_sts
 .
 js
