--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -65977,6 +65977,71 @@ mirror
 :
 always
 #
+Cancel
+outgoing
+requests
+from
+SystemPrincipal
+:
+#
+but
+only
+with
+scheme
+http
+(
+s
+)
+and
+contentpolicytype
+subdocument
+-
+name
+:
+security
+.
+disallow_privileged_https_subdocuments_loads
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
+Cancel
+outgoing
+requests
+from
+SystemPrincipal
+:
+#
+but
+only
+with
+scheme
+data
+and
+contentpolicytype
+subdocument
+-
+name
+:
+security
+.
+disallow_privileged_data_subdocuments_loads
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+#
 Disable
 preloaded
 static
