--- a/js/src/jit/LIROps.yaml
+++ b/js/src/jit/LIROps.yaml
@@ -8311,6 +8311,24 @@ true
 -
 name
 :
+GuardToFunction
+result_type
+:
+WordSized
+operands
+:
+lhs
+:
+WordSized
+num_temps
+:
+1
+mir_op
+:
+true
+-
+name
+:
 ObjectClassToString
 result_type
 :
