Bug 1723574 - Enable mochitest-browser-chrome tests that no longer fail r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D123247

UltraBlame original commit: 177cafd3e2ba98e730ac77e2268ce071fdb9f8de

--- a/browser/components/uitour/test/browser.ini
+++ b/browser/components/uitour/test/browser.ini
@@ -69,10 +69,6 @@ asan
 #
 updateUI
 leaks
-win10_2004
-#
-Bug
-1723573
 [
 browser_fxa_config
 .
@@ -83,6 +79,10 @@ skip
 if
 =
 win10_2004
+&
+&
+!
+fission
 #
 Bug
 1723573
@@ -96,6 +96,10 @@ skip
 if
 =
 win10_2004
+&
+&
+!
+fission
 #
 Bug
 1723573
