--- a/dom/u2f/tests/browser/browser.ini
+++ b/dom/u2f/tests/browser/browser.ini
@@ -17,35 +17,14 @@ if
 =
 !
 e10s
-os
-=
-=
-'
-win
-'
-&
-&
-version
-=
-=
-'
-18362
-'
+win10_2004
 #
-win10
--
-1903
-+
--
-test
+Test
 not
 relevant
 on
 1903
-win10_2004
-#
-Bug
-1723573
++
 [
 browser_abort_visibility
 .
