--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -1879,6 +1879,40 @@ crash
 as
 -
 pass
+windows10
+-
+64
+-
+2004
+-
+*
+.
+*
+:
+-
+-
+-
+run
+-
+failures
+=
+win10_2004
+-
+-
+-
+timeout
+-
+as
+-
+pass
+-
+-
+-
+crash
+-
+as
+-
+pass
 browser
 -
 screenshots
