--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -1489,6 +1489,24 @@ ext
 reftest
 -
 xpcshell
+windows10
+-
+64
+-
+2004
+-
+failure
+-
+tests
+:
+-
+mochitest
+-
+browser
+-
+chrome
+-
+failures
 mingwclang
 -
 tests
