--- a/toolkit/components/passwordmgr/test/browser/browser.ini
+++ b/toolkit/components/passwordmgr/test/browser/browser.ini
@@ -546,14 +546,6 @@ browser_doorhanger_toggles
 .
 js
 ]
-skip
--
-if
-=
-win10_2004
-#
-Bug
-1723573
 [
 browser_doorhanger_username_edits
 .
@@ -692,6 +684,10 @@ bits
 Bug
 1683848
 win10_2004
+&
+&
+!
+fission
 #
 Bug
 1723573
