--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -1487,6 +1487,16 @@ windows10
 2004
 -
 tests
+-
+windows10
+-
+64
+-
+2004
+-
+failure
+-
+tests
 windows10
 -
 64
@@ -1548,6 +1558,16 @@ headless
 windows10
 -
 2004
+-
+tests
+-
+windows10
+-
+64
+-
+2004
+-
+failure
 -
 tests
 windows10
