Bug 1723899 - Disable browser_identityPopup_focus on linux asan, tsan and verify. r=prathiksha
Differential Revision: https://phabricator.services.mozilla.com/D123213

UltraBlame original commit: 9b90288e56596d2b950a11ae0b69eb34ae2614f7

--- a/browser/base/content/test/siteIdentity/browser.ini
+++ b/browser/base/content/test/siteIdentity/browser.ini
@@ -289,6 +289,32 @@ browser_identityPopup_focus
 .
 js
 ]
+skip
+-
+if
+=
+verify
+|
+|
+(
+os
+=
+=
+"
+linux
+"
+&
+&
+(
+asan
+|
+|
+tsan
+)
+)
+#
+Bug
+1723899
 [
 browser_identityPopup_HttpsOnlyMode
 .
