Bug 1725214 - disable dom/security/test/general/browser_test_framing_error_pages.js for frequent linux failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D123320

UltraBlame original commit: a3a344665d2c0358a656c0a01c3a1b76ea106b4e

--- a/dom/security/test/general/browser.ini
+++ b/dom/security/test/general/browser.ini
@@ -144,6 +144,28 @@ browser_test_framing_error_pages
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+&
+&
+bits
+=
+=
+64
+&
+&
+debug
+#
+Bug
+1725214
 support
 -
 files
