Bug 1725195 - skip browser_test_framing_error_pages.js on Linux in general and on macOS + Windows debug for frequent failures. r=jmaher DONTBUILD
Compared to bug 1725214, this failure affects all desktop platforms. On Linux,
the annotation to only skip if the application is 64-bit gets removed because
the test suite always only runs for 64-bit.

The failures started after the changes in bug 1722911 made the tests
https-first compliant.

Differential Revision: https://phabricator.services.mozilla.com/D123369

UltraBlame original commit: 4e4e174c4e7eed3e519b6186581faa24f9cb3509

--- a/dom/security/test/general/browser.ini
+++ b/dom/security/test/general/browser.ini
@@ -154,18 +154,33 @@ os
 "
 linux
 "
-&
-&
-bits
+#
+bug
+1725195
+os
 =
 =
-64
+"
+mac
+"
 &
 &
 debug
 #
-Bug
-1725214
+bug
+1725195
+os
+=
+=
+"
+win
+"
+&
+&
+debug
+#
+bug
+1725195
 support
 -
 files
