Bug 1727186 - Migrate crashtest from Windows 10 AWS and hardware to Azure r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D123380

UltraBlame original commit: ed42cc6fe84fc887c46dcc4e1f6f702d40ccb148

--- a/taskcluster/ci/test/reftest.yml
+++ b/taskcluster/ci/test/reftest.yml
@@ -338,6 +338,8 @@ windows10
 -
 64
 -
+2004
+-
 qr
 /
 debug
@@ -355,6 +357,8 @@ fission
 windows10
 -
 64
+-
+2004
 -
 asan
 -
@@ -823,10 +827,16 @@ platform
 windows10
 -
 64
+-
+2004
 .
 *
 :
-hardware
+virtual
+-
+with
+-
+gpu
 default
 :
 virtual
