Bug 1726396 - Update getComputedStyle pseudo-element behavior. r=dholbert
Differential Revision: https://phabricator.services.mozilla.com/D122978

UltraBlame original commit: a030e70b6c062dabffaafab83beb85dc7fd33601

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -42252,31 +42252,26 @@ always
 Whether
 we
 should
-throw
+return
+an
+empty
+style
 on
 invalid
 pseudo
 -
 elements
-passed
-to
+starting
 #
-getComputedStyle
-(
-)
-as
-per
-spec
+with
+a
+colon
 .
 #
 #
 Old
 behavior
 is
-a
-bit
-odd
-:
 returning
 an
 empty
@@ -42286,9 +42281,9 @@ the
 string
 starts
 with
-#
 a
 double
+#
 colon
 and
 return
@@ -42308,19 +42303,21 @@ computed
 -
 style
 .
-throw
--
-on
+new
 -
 invalid
 -
 pseudo
+-
+element
+-
+behavior
 type
 :
 bool
 value
 :
-false
+true
 mirror
 :
 always
