Bug 1727024 - Make `KeyboardEvent.initKeyEvent` is available in addons r=smaug
During in a couple of releases, we should put off to unship
`KeyboardEvent.initKeyEvent` only in addon script because some addons assume
that the Gecko specific legacy API works in any versions.

Differential Revision: https://phabricator.services.mozilla.com/D123310

UltraBlame original commit: 4660313ac0685ff73fbead9e290918d0ceb32181

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -15581,6 +15581,43 @@ mirror
 :
 always
 #
+Enable
+/
+disable
+KeyboardEvent
+.
+initKeyEvent
+function
+in
+addons
+even
+if
+it
+'
+s
+#
+disabled
+.
+-
+name
+:
+dom
+.
+keyboardevent
+.
+init_key_event
+.
+enabled_in_addons
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
 If
 this
 is
