--- a/dom/events/test/browser.ini
+++ b/dom/events/test/browser.ini
@@ -74,6 +74,40 @@ browser_bug1539497
 js
 ]
 [
+browser_keyboard_event_init_key_event_enabled_in_contentscript
+.
+js
+]
+support
+-
+files
+=
+file_keyboard_event_init_key_event_enabled_in_contentscript
+.
+html
+.
+.
+/
+.
+.
+/
+.
+.
+/
+browser
+/
+base
+/
+content
+/
+test
+/
+general
+/
+head
+.
+js
+[
 browser_mouse_enterleave_switch_tab
 .
 js
