--- a/devtools/server/tests/xpcshell/xpcshell.ini
+++ b/devtools/server/tests/xpcshell/xpcshell.ini
@@ -24,6 +24,40 @@ toolkit
 '
 android
 '
+#
+While
+not
+every
+devtools
+test
+uses
+evalInSandbox
+over
+80
+do
+so
+it
+'
+s
+easier
+to
+#
+set
+the
+pref
+for
+all
+the
+tests
+here
+.
+prefs
+=
+security
+.
+allow_parent_unrestricted_js_loads
+=
+true
 support
 -
 files
