Bug 1726364 - Scroll events stop working after synchronous XHR request while scrolling an iframe, r=edgar
I tried to keep the changes minimal in this case.
We may need some more changes to Document::UnsuppressEventHandlingAndFireEvents to make it work
well with Fission (but that Fission work is totally unrelated to this fix).

Differential Revision: https://phabricator.services.mozilla.com/D123389

UltraBlame original commit: c83145ac13aeb1fa89fcd6f04323f06b2ff080a6

--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -4023,6 +4023,18 @@ test_style_cssText
 html
 ]
 [
+test_suppressed_events_and_scrolling
+.
+html
+]
+support
+-
+files
+=
+file_suppressed_events_and_scrolling
+.
+html
+[
 test_suppressed_microtasks
 .
 html
