--- a/browser/base/content/test/fullscreen/browser.ini
+++ b/browser/base/content/test/fullscreen/browser.ini
@@ -80,6 +80,17 @@ html
 fullscreen_frame
 .
 html
+skip
+-
+if
+=
+win10_2004
+#
+Bug
+1727168
+and
+Bug
+1723574
 [
 browser_fullscreen_enterInUrlbar
 .
