Bug 1633189 - disable toolkit/components/extensions/test/mochitest/test_ext_webrequest_basic.html for frequent linux-asan-opt failures. r=intermittent-reviewers,jmaher,robwu DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D123339

UltraBlame original commit: c665c7f04cf629df62d72271de87723c52196e89

--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -1455,6 +1455,28 @@ line
 157
 }
 ]
+os
+=
+=
+"
+linux
+"
+&
+&
+bits
+=
+=
+64
+&
+&
+!
+debug
+&
+&
+asan
+#
+Bug
+1633189
 [
 test_ext_webrequest_errors
 .
