Bug 1727407 - do not allow android power tests to run on s7 phones. r=aerickson
Differential Revision: https://phabricator.services.mozilla.com/D123531

UltraBlame original commit: 2126974797fe47b2d3fb435ff233242330bc88c1

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -2401,6 +2401,14 @@ android
 -
 hw
 -
+browsertime
+-
+power
+-
+android
+-
+hw
+-
 arm7
 -
 raptor
@@ -2461,6 +2469,14 @@ android
 hw
 -
 browsertime
+-
+android
+-
+hw
+-
+browsertime
+-
+power
 -
 android
 -
@@ -2544,6 +2560,14 @@ android
 -
 hw
 -
+browsertime
+-
+power
+-
+android
+-
+hw
+-
 arm7
 -
 pgo
@@ -2619,6 +2643,14 @@ android
 -
 hw
 -
+browsertime
+-
+power
+-
+android
+-
+hw
+-
 arm7
 -
 pgo
@@ -2737,6 +2769,14 @@ android
 -
 hw
 -
+browsertime
+-
+power
+-
+android
+-
+hw
+-
 aarch64
 -
 opt
@@ -2815,6 +2855,14 @@ android
 hw
 -
 browsertime
+-
+android
+-
+hw
+-
+browsertime
+-
+power
 -
 android
 -
