Bug 1726474 - Enable wasm32-wasi support on clang-mingw toolchains. r=firefox-build-system-reviewers,mhentges
Differential Revision: https://phabricator.services.mozilla.com/D123425

UltraBlame original commit: b71fd68e042df2dae06fa64fd381d3885dd097fd

--- a/taskcluster/ci/toolchain/clang.yml
+++ b/taskcluster/ci/toolchain/clang.yml
@@ -484,6 +484,14 @@ linux64
 toolchain
 -
 sysroot
+-
+wasm32
+-
+wasi
+-
+compiler
+-
+rt
 linux64
 -
 clang
@@ -637,6 +645,14 @@ linux64
 toolchain
 -
 sysroot
+-
+wasm32
+-
+wasi
+-
+compiler
+-
+rt
 linux64
 -
 clang
