Bug 1725635 - disable browser_gc_schedule.js on linux_18.04_64_debug for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D123306

UltraBlame original commit: e768c0d7b6ccc19ce197bfbf395c9b553996813c

--- a/dom/ipc/tests/browser.ini
+++ b/dom/ipc/tests/browser.ini
@@ -243,6 +243,24 @@ indicate
 a
 real
 problem
+os
+=
+=
+'
+linux
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+debug
+#
+Bug
+1725635
 [
 browser_very_fission
 .
