--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -61954,6 +61954,62 @@ mirror
 :
 always
 #
+Whether
+we
+attempt
+to
+generate
+and
+use
+document
+-
+internal
+PDF
+destinations
+.
+#
+This
+currently
+sometimes
+results
+in
+an
+internal
+cairo
+error
+see
+bug
+1725743
+;
+#
+disabled
+by
+default
+until
+that
+is
+resolved
+.
+-
+name
+:
+print
+.
+save_as_pdf
+.
+internal_destinations
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
 The
 default
 DPI
