Bug 1713510 - disable browser_bookmarksProperties.js on Linux for frequent failures. r=intermittent-reviewers,Standard8,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D122959

UltraBlame original commit: 42d69da8a997fa6321e0ac340efb11f90a548b35

--- a/browser/components/places/tests/browser/browser.ini
+++ b/browser/components/places/tests/browser/browser.ini
@@ -479,10 +479,17 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1712814
+Bug
+1713510
 [
 browser_check_correct_controllers
 .
@@ -524,7 +531,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -545,7 +557,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -571,7 +588,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -592,7 +614,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -613,7 +640,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -634,7 +666,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -713,7 +750,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -734,7 +776,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -755,7 +802,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -776,7 +828,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -872,7 +929,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -893,7 +955,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -914,7 +981,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -935,7 +1007,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -956,7 +1033,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -1015,7 +1097,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
@@ -1044,7 +1131,12 @@ linux
 "
 &
 &
+(
 tsan
+|
+|
+asan
+)
 #
 Bug
 1714384
