Bug 1726202 - Add cbcs clear key test cases. r=jolin
Add several test cases to cover our cbcs path. These test a number of different
patterns. These patterns are
- 1:9, 5:5, 10:0. These are more conventional patterns.
- 7:7, 9:8. These are not conventional. Both go against the spec by not summing
  to 10. This tests we can appropriately handle unconventional cases.

Note that the spec says patterns should only be applied to video tracks. So in
all cases the audio actually use 0:0 (full encryption). So these test cases also
cover the 0:0 case.

Differential Revision: https://phabricator.services.mozilla.com/D123498

UltraBlame original commit: 820a165f2cf5ffc89aa59b8edc58f8cdb1f359d2

--- a/dom/media/test/mochitest.ini
+++ b/dom/media/test/mochitest.ini
@@ -3978,6 +3978,186 @@ mp4
 ^
 headers
 ^
+bipbop_cbcs_1_9_audio_1
+.
+m4s
+bipbop_cbcs_1_9_audio_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_1_9_audio_init
+.
+mp4
+bipbop_cbcs_1_9_audio_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_1_9_video_1
+.
+m4s
+bipbop_cbcs_1_9_video_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_1_9_video_init
+.
+mp4
+bipbop_cbcs_1_9_video_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_5_5_audio_1
+.
+m4s
+bipbop_cbcs_5_5_audio_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_5_5_audio_init
+.
+mp4
+bipbop_cbcs_5_5_audio_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_5_5_video_1
+.
+m4s
+bipbop_cbcs_5_5_video_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_5_5_video_init
+.
+mp4
+bipbop_cbcs_5_5_video_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_7_7_audio_1
+.
+m4s
+bipbop_cbcs_7_7_audio_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_7_7_audio_init
+.
+mp4
+bipbop_cbcs_7_7_audio_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_7_7_video_1
+.
+m4s
+bipbop_cbcs_7_7_video_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_7_7_video_init
+.
+mp4
+bipbop_cbcs_7_7_video_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_9_8_audio_1
+.
+m4s
+bipbop_cbcs_9_8_audio_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_9_8_audio_init
+.
+mp4
+bipbop_cbcs_9_8_audio_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_9_8_video_1
+.
+m4s
+bipbop_cbcs_9_8_video_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_9_8_video_init
+.
+mp4
+bipbop_cbcs_9_8_video_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_10_0_audio_1
+.
+m4s
+bipbop_cbcs_10_0_audio_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_10_0_audio_init
+.
+mp4
+bipbop_cbcs_10_0_audio_init
+.
+mp4
+^
+headers
+^
+bipbop_cbcs_10_0_video_1
+.
+m4s
+bipbop_cbcs_10_0_video_1
+.
+m4s
+^
+headers
+^
+bipbop_cbcs_10_0_video_init
+.
+mp4
+bipbop_cbcs_10_0_video_init
+.
+mp4
+^
+headers
+^
 bipbop_short_pixel_metadata_bigger_than_in_stream_vp8
 .
 webm
