Bug 1727438 - Upgrade to Gradle 6.9.1. r=nalexander
This is the last version that doesn't require Java 11, we will upgrade to
Gradle 7 once all components are ready (namely, apilint).

Co-authored-by: Jan-Erik Rediger <janerikfnordig.de>

Differential Revision: https://phabricator.services.mozilla.com/D123569

UltraBlame original commit: efda82445d85d5605ea900c1851ea214cc39c547

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -3266,6 +3266,12 @@ get
 )
 .
 sourceOutputDir
+.
+asFile
+.
+get
+(
+)
 +
 variant
 .
@@ -3276,7 +3282,45 @@ get
 )
 .
 sourceOutputDir
+.
+asFile
+.
+get
+(
 )
+)
+classpath
++
+=
+project
+.
+files
+(
+android
+.
+getBootClasspath
+(
+)
+.
+join
+(
+File
+.
+pathSeparator
+)
+)
+classpath
++
+=
+variant
+.
+javaCompileProvider
+.
+get
+(
+)
+.
+classpath
 /
 /
 javadoc
@@ -3673,7 +3717,7 @@ java
 }
 checkstyle
 {
-configDir
+configDirectory
 =
 file
 (
