--- a/taskcluster/ci/source-test/mozlint-android.yml
+++ b/taskcluster/ci/source-test/mozlint-android.yml
@@ -301,13 +301,66 @@ javac
 /
 withGeckoBinariesDebug
 /
-compileWithGeckoBinariesDebugJavaWithJavac
+classes
+/
+api
+.
+txt
+type
+:
+file
+-
+name
+:
+public
+/
+android
+/
+geckoview
+/
+api
+.
+txt
+.
+map
+path
+:
+/
+builds
+/
+worker
+/
+checkouts
+/
+gecko
+/
+obj
+-
+firefox
+/
+gradle
+/
+build
+/
+mobile
+/
+android
+/
+geckoview
+/
+intermediates
+/
+javac
+/
+withGeckoBinariesDebug
 /
 classes
 /
 api
 .
 txt
+.
+map
 type
 :
 file
@@ -355,8 +408,6 @@ intermediates
 javac
 /
 withGeckoBinariesDebug
-/
-compileWithGeckoBinariesDebugJavaWithJavac
 /
 classes
 /
