Bug 1727438 - Import publishing metadata from variant. r=nalexander
There's a lot of code that we don't need anymore in our publication path (I'm
assuming it was needed when it was written but then gradle/the android plugin
caught up).

This has the nice side effect of producing better metadata (e.g. our
implementation dependencies end up in the |runtime| dependency group instead of
the default one where they were before, which means the app doesn't inherit our
private dependencies).

Co-authored-by: Jan-Erik Rediger <janerikfnordig.de>

Differential Revision: https://phabricator.services.mozilla.com/D123571

UltraBlame original commit: 8cba5f574196729c1e80aa2a7247275a1020f26f

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -378,7 +378,7 @@ code
 ;
 }
 def
-computeVersionNumber
+getVersionNumber
 (
 )
 {
@@ -401,7 +401,9 @@ split
 .
 '
 )
-return
+def
+version
+=
 parts
 [
 0
@@ -423,6 +425,49 @@ parts
 getBuildId
 (
 )
+if
+(
+!
+mozconfig
+.
+substs
+.
+MOZILLA_OFFICIAL
+&
+&
+!
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_FAT_AAR_ARCHITECTURES
+)
+{
+/
+/
+Use
+-
+SNAPSHOT
+versions
+locally
+to
+enable
+the
+local
+GeckoView
+substitution
+flow
+.
+version
++
+=
+"
+-
+SNAPSHOT
+"
+}
+return
+version
 }
 /
 /
@@ -4015,79 +4060,10 @@ publish
 '
 version
 =
-computeVersionNumber
+getVersionNumber
 (
 )
-if
-(
-!
-mozconfig
-.
-substs
-.
-MOZILLA_OFFICIAL
-&
-&
-!
-mozconfig
-.
-substs
-.
-MOZ_ANDROID_FAT_AAR_ARCHITECTURES
-)
-{
-/
-/
-Use
--
-SNAPSHOT
-versions
-locally
-to
-enable
-the
-local
-GeckoView
-substitution
-flow
-.
-version
-=
-"
-{
-version
-}
--
-SNAPSHOT
-"
-}
-publishing
-{
-publications
-{
-android
-.
-libraryVariants
-.
-all
-{
-variant
--
->
-"
-{
-variant
-.
-name
-}
-"
-(
-MavenPublication
-)
-{
-pom
-{
-groupId
+group
 =
 '
 org
@@ -4097,31 +4073,15 @@ mozilla
 geckoview
 '
 def
-omniSuffix
-=
-"
-"
-if
+getArtifactId
 (
-!
-mozconfig
-.
-substs
-.
-MOZ_ANDROID_GECKOVIEW_LITE
 )
 {
-omniSuffix
-=
-"
--
-omni
-"
-}
 def
-channelSuffix
+id
 =
 "
+geckoview
 "
 /
 /
@@ -4153,7 +4113,8 @@ release
 '
 )
 {
-channelSuffix
+id
++
 =
 "
 -
@@ -4166,13 +4127,24 @@ MOZ_UPDATE_CHANNEL
 }
 "
 }
-artifactId
+if
+(
+!
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_GECKOVIEW_LITE
+)
+{
+id
++
 =
 "
-geckoview
-channelSuffix
-omniSuffix
+-
+omni
 "
+}
 if
 (
 mozconfig
@@ -4254,12 +4226,10 @@ into
 consumers
 easily
 .
-artifactId
+id
++
 =
 "
-{
-artifactId
-}
 -
 {
 mozconfig
@@ -4270,6 +4240,52 @@ ANDROID_CPU_ARCH
 }
 "
 }
+return
+id
+}
+publishing
+{
+publications
+{
+android
+.
+libraryVariants
+.
+all
+{
+variant
+-
+>
+"
+{
+variant
+.
+name
+}
+"
+(
+MavenPublication
+)
+{
+from
+components
+.
+findByName
+(
+variant
+.
+name
+)
+pom
+{
+afterEvaluate
+{
+artifactId
+=
+getArtifactId
+(
+)
+}
 url
 =
 '
@@ -4277,15 +4293,9 @@ https
 :
 /
 /
-wiki
+geckoview
 .
-mozilla
-.
-org
-/
-Mobile
-/
-GeckoView
+dev
 '
 licenses
 {
@@ -4451,226 +4461,7 @@ central
 '
 }
 }
-/
-/
-Unfortunately
-Gradle
-does
-not
-provide
-a
-way
-to
-expose
-dependencies
-for
-custom
-/
-/
-project
-types
-like
-Android
-plugins
-.
-So
-we
-need
-to
-add
-them
-manually
-to
-the
-POM
-/
-/
-XML
-here
-or
-use
-a
-plugin
-that
-achieves
-the
-same
-(
-like
-/
-/
-https
-:
-/
-/
-github
-.
-com
-/
-wupdigital
-/
-android
--
-maven
--
-publish
-)
-.
-We
-elect
-to
-do
-this
-/
-/
-manually
-since
-our
-dependencies
-are
-simple
-and
-plugins
-increase
-our
-complexity
-/
-/
-surface
-.
-This
-workaround
-can
-be
-removed
-after
-this
-issue
-is
-fixed
-:
-/
-/
-https
-:
-/
-/
-github
-.
-com
-/
-gradle
-/
-gradle
-/
-issues
-/
-1842
-withXml
-{
-def
-dependenciesNode
-=
-asNode
-(
-)
-.
-appendNode
-(
-'
-dependencies
-'
-)
-for
-(
-configurationName
-in
-[
-"
-implementation
-"
-"
-api
-"
-]
-)
-{
-configurations
-.
-getByName
-(
-configurationName
-)
-.
-dependencies
-.
-each
-{
-def
-dependencyNode
-=
-dependenciesNode
-.
-appendNode
-(
-'
-dependency
-'
-)
-dependencyNode
-.
-appendNode
-(
-'
-groupId
-'
-it
-.
-group
-)
-dependencyNode
-.
-appendNode
-(
-'
-artifactId
-'
-it
-.
-name
-)
-dependencyNode
-.
-appendNode
-(
-'
-version
-'
-it
-.
-version
-)
 }
-}
-}
-}
-artifact
-tasks
-[
-"
-bundle
-{
-variant
-.
-name
-.
-capitalize
-(
-)
-}
-Aar
-"
-]
 /
 /
 Javadoc
