Bug 1727438 - Define glean as a capability instead of depending on it. r=nalexander
Depending on glean creates a circular dependency as glean depends on
glean-native which is substituted with GeckoView in omni builds.

Since Gradle 6 capabilities are passed on to consumers using the Gradle Module
Metadata, so now we can just define a glean capability in GeckoView and Fenix
will consume glean-native from GeckoView instead of adding a duplicated
libglean blob (there is code in the glean plugin to make sure this happens).

See also: https://docs.gradle.org/current/userguide/component_capabilities.html

Co-authored-by: Jan-Erik Rediger <janerikfnordig.de>

Differential Revision: https://phabricator.services.mozilla.com/D123572

UltraBlame original commit: 59d1a463178bd6c0aa6d3153c926b494d7db1fb7

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -2121,78 +2121,170 @@ listener
 }
 configurations
 {
+withGeckoBinariesApi
+{
+outgoing
+{
+if
+(
+!
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_GECKOVIEW_LITE
+)
+{
 /
 /
-No
-need
-to
-include
-libglean_ffi
-.
-so
-here
-or
-for
-GeckoView
-consumers
-.
-/
-/
-If
-those
-consumers
-use
-Glean
-they
-'
-ll
-get
-the
-FFI
-through
-GeckoView
-anyway
-.
-all
-*
-.
-exclude
-group
-:
-'
+The
+omni
+build
+provides
+glean
+-
+native
+capability
+(
+"
 org
 .
 mozilla
 .
 telemetry
-'
-module
 :
-'
 glean
 -
 native
-'
-all
-*
-.
-exclude
-group
 :
-'
-net
+{
+project
 .
-java
+ext
 .
-dev
+gleanVersion
+}
+"
+)
+}
+afterEvaluate
+{
+/
+/
+Implicit
+capability
+capability
+(
+"
+org
 .
-jna
-'
-module
+mozilla
+.
+geckoview
 :
+{
+getArtifactId
+(
+)
+}
+:
+{
+getVersionNumber
+(
+)
+}
+"
+)
+}
+}
+}
+/
+/
+TODO
+:
+This
+is
+a
+workaround
+for
+a
+bug
+that
+was
+fixed
+in
+Gradle
+7
+.
+/
+/
+The
+variant
+resolver
+_should_
+pick
+the
+RuntimeOnly
+configuration
+when
+building
+/
+/
+the
+tests
+as
+those
+define
+the
+implicit
+:
+geckoview
+capability
+but
+it
+doesn
 '
-jna
-'
+t
+/
+/
+so
+we
+manually
+define
+it
+here
+.
+withGeckoBinariesRuntimeOnly
+{
+outgoing
+{
+afterEvaluate
+{
+/
+/
+Implicit
+capability
+capability
+(
+"
+org
+.
+mozilla
+.
+geckoview
+:
+geckoview
+:
+{
+getVersionNumber
+(
+)
+}
+"
+)
+}
+}
+}
 }
 dependencies
 {
@@ -2273,47 +2365,6 @@ jvm
 .
 70
 "
-/
-/
-The
-Glean
-Kotlin
-which
-will
-be
-re
--
-exported
-.
-if
-(
-!
-mozconfig
-.
-substs
-.
-MOZ_ANDROID_GECKOVIEW_LITE
-)
-{
-api
-"
-org
-.
-mozilla
-.
-telemetry
-:
-glean
-:
-{
-project
-.
-ext
-.
-gleanVersion
-}
-"
-}
 implementation
 "
 androidx
