Bug 1727577 - Improve no-topobjdir experience in Android Studio. r=nalexander
Differential Revision: https://phabricator.services.mozilla.com/D123649

UltraBlame original commit: 552d8919435cf2653f7652a238c0b297cdb0b7ff

--- a/settings.gradle
+++ b/settings.gradle
@@ -212,10 +212,24 @@ exitValue
 0
 )
 {
-throw
-new
-GradleException
+logger
+.
+info
 (
+"
+Error
+running
+.
+/
+mach
+environment
+:
+\
+n
+\
+n
+"
++
 "
 Process
 '
@@ -241,10 +255,17 @@ exitValue
 \
 n
 \
-nstdout
+n
+"
++
+"
+stdout
 :
 \
 n
+"
++
+"
 {
 standardOutput
 .
@@ -255,10 +276,17 @@ toString
 \
 n
 \
-nstderr
+n
+"
++
+"
+stderr
 :
 \
 n
+"
++
+"
 {
 standardError
 .
@@ -266,6 +294,29 @@ toString
 (
 )
 }
+"
+)
+throw
+new
+StopExecutionException
+(
+"
+Could
+not
+run
+.
+/
+mach
+environment
+.
+Try
+running
+.
+/
+mach
+build
+first
+.
 "
 )
 }
