Bug 1725353 - Store download permissions for the websites with multiple automatic downloads. r=mtigley
Differential Revision: https://phabricator.services.mozilla.com/D119512

UltraBlame original commit: 98818382d811092b7098a26a4ffcc0cc77019269

--- a/uriloader/exthandler/tests/mochitest/browser.ini
+++ b/uriloader/exthandler/tests/mochitest/browser.ini
@@ -133,6 +133,18 @@ browser_download_skips_dialog
 js
 ]
 [
+browser_download_spam_permissions
+.
+js
+]
+support
+-
+files
+=
+test_spammy_page
+.
+html
+[
 browser_download_urlescape
 .
 js
