Bug 1634684 - disable test_peerConnection_verifyVideoAfterRenegotiation.html on linux64 debug for frequent failures r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D123684

UltraBlame original commit: d87e8ca25738064a2955103b2d4eeb494a146e87

--- a/dom/media/webrtc/tests/mochitests/mochitest.ini
+++ b/dom/media/webrtc/tests/mochitests/mochitest.ini
@@ -2454,6 +2454,28 @@ test_peerConnection_verifyVideoAfterRenegotiation
 .
 html
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+&
+&
+bits
+=
+=
+64
+&
+&
+debug
+#
+Bug
+1634684
 [
 test_peerConnection_videoCodecs
 .
