Backed out 5 changesets (bug 1727438, bug 1727577) for causing Android bustage. CLOSED TREE
Backed out changeset 552d8919435c (bug 1727577)
Backed out changeset 59d1a463178b (bug 1727438)
Backed out changeset 8cba5f574196 (bug 1727438)
Backed out changeset 00d32a3af979 (bug 1727438)
Backed out changeset efda82445d85 (bug 1727438)

UltraBlame original commit: 73f619a0122ac3e9c993e297c3cb41cf03cc9db2

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -378,7 +378,7 @@ code
 ;
 }
 def
-getVersionNumber
+computeVersionNumber
 (
 )
 {
@@ -401,9 +401,7 @@ split
 .
 '
 )
-def
-version
-=
+return
 parts
 [
 0
@@ -425,49 +423,6 @@ parts
 getBuildId
 (
 )
-if
-(
-!
-mozconfig
-.
-substs
-.
-MOZILLA_OFFICIAL
-&
-&
-!
-mozconfig
-.
-substs
-.
-MOZ_ANDROID_FAT_AAR_ARCHITECTURES
-)
-{
-/
-/
-Use
--
-SNAPSHOT
-versions
-locally
-to
-enable
-the
-local
-GeckoView
-substitution
-flow
-.
-version
-+
-=
-"
--
-SNAPSHOT
-"
-}
-return
-version
 }
 /
 /
@@ -2121,170 +2076,78 @@ listener
 }
 configurations
 {
-withGeckoBinariesApi
-{
-outgoing
-{
-if
-(
-!
-mozconfig
-.
-substs
-.
-MOZ_ANDROID_GECKOVIEW_LITE
-)
-{
 /
 /
-The
-omni
-build
-provides
-glean
--
-native
-capability
-(
-"
+No
+need
+to
+include
+libglean_ffi
+.
+so
+here
+or
+for
+GeckoView
+consumers
+.
+/
+/
+If
+those
+consumers
+use
+Glean
+they
+'
+ll
+get
+the
+FFI
+through
+GeckoView
+anyway
+.
+all
+*
+.
+exclude
+group
+:
+'
 org
 .
 mozilla
 .
 telemetry
+'
+module
 :
+'
 glean
 -
 native
-:
-{
-project
-.
-ext
-.
-gleanVersion
-}
-"
-)
-}
-afterEvaluate
-{
-/
-/
-Implicit
-capability
-capability
-(
-"
-org
-.
-mozilla
-.
-geckoview
-:
-{
-getArtifactId
-(
-)
-}
-:
-{
-getVersionNumber
-(
-)
-}
-"
-)
-}
-}
-}
-/
-/
-TODO
-:
-This
-is
-a
-workaround
-for
-a
-bug
-that
-was
-fixed
-in
-Gradle
-7
-.
-/
-/
-The
-variant
-resolver
-_should_
-pick
-the
-RuntimeOnly
-configuration
-when
-building
-/
-/
-the
-tests
-as
-those
-define
-the
-implicit
-:
-geckoview
-capability
-but
-it
-doesn
 '
-t
-/
-/
-so
-we
-manually
-define
-it
-here
+all
+*
 .
-withGeckoBinariesRuntimeOnly
-{
-outgoing
-{
-afterEvaluate
-{
-/
-/
-Implicit
-capability
-capability
-(
-"
-org
-.
-mozilla
-.
-geckoview
+exclude
+group
 :
-geckoview
+'
+net
+.
+java
+.
+dev
+.
+jna
+'
+module
 :
-{
-getVersionNumber
-(
-)
-}
-"
-)
-}
-}
-}
+'
+jna
+'
 }
 dependencies
 {
@@ -2365,6 +2228,47 @@ jvm
 .
 70
 "
+/
+/
+The
+Glean
+Kotlin
+which
+will
+be
+re
+-
+exported
+.
+if
+(
+!
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_GECKOVIEW_LITE
+)
+{
+api
+"
+org
+.
+mozilla
+.
+telemetry
+:
+glean
+:
+{
+project
+.
+ext
+.
+gleanVersion
+}
+"
+}
 implementation
 "
 androidx
@@ -3362,12 +3266,6 @@ get
 )
 .
 sourceOutputDir
-.
-asFile
-.
-get
-(
-)
 +
 variant
 .
@@ -3378,45 +3276,7 @@ get
 )
 .
 sourceOutputDir
-.
-asFile
-.
-get
-(
 )
-)
-classpath
-+
-=
-project
-.
-files
-(
-android
-.
-getBootClasspath
-(
-)
-.
-join
-(
-File
-.
-pathSeparator
-)
-)
-classpath
-+
-=
-variant
-.
-javaCompileProvider
-.
-get
-(
-)
-.
-classpath
 /
 /
 javadoc
@@ -3813,7 +3673,7 @@ java
 }
 checkstyle
 {
-configDirectory
+configDir
 =
 file
 (
@@ -4111,10 +3971,79 @@ publish
 '
 version
 =
-getVersionNumber
+computeVersionNumber
 (
 )
-group
+if
+(
+!
+mozconfig
+.
+substs
+.
+MOZILLA_OFFICIAL
+&
+&
+!
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_FAT_AAR_ARCHITECTURES
+)
+{
+/
+/
+Use
+-
+SNAPSHOT
+versions
+locally
+to
+enable
+the
+local
+GeckoView
+substitution
+flow
+.
+version
+=
+"
+{
+version
+}
+-
+SNAPSHOT
+"
+}
+publishing
+{
+publications
+{
+android
+.
+libraryVariants
+.
+all
+{
+variant
+-
+>
+"
+{
+variant
+.
+name
+}
+"
+(
+MavenPublication
+)
+{
+pom
+{
+groupId
 =
 '
 org
@@ -4124,15 +4053,31 @@ mozilla
 geckoview
 '
 def
-getArtifactId
-(
-)
-{
-def
-id
+omniSuffix
 =
 "
-geckoview
+"
+if
+(
+!
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_GECKOVIEW_LITE
+)
+{
+omniSuffix
+=
+"
+-
+omni
+"
+}
+def
+channelSuffix
+=
+"
 "
 /
 /
@@ -4164,8 +4109,7 @@ release
 '
 )
 {
-id
-+
+channelSuffix
 =
 "
 -
@@ -4178,24 +4122,13 @@ MOZ_UPDATE_CHANNEL
 }
 "
 }
-if
-(
-!
-mozconfig
-.
-substs
-.
-MOZ_ANDROID_GECKOVIEW_LITE
-)
-{
-id
-+
+artifactId
 =
 "
--
-omni
+geckoview
+channelSuffix
+omniSuffix
 "
-}
 if
 (
 mozconfig
@@ -4277,10 +4210,12 @@ into
 consumers
 easily
 .
-id
-+
+artifactId
 =
 "
+{
+artifactId
+}
 -
 {
 mozconfig
@@ -4291,52 +4226,6 @@ ANDROID_CPU_ARCH
 }
 "
 }
-return
-id
-}
-publishing
-{
-publications
-{
-android
-.
-libraryVariants
-.
-all
-{
-variant
--
->
-"
-{
-variant
-.
-name
-}
-"
-(
-MavenPublication
-)
-{
-from
-components
-.
-findByName
-(
-variant
-.
-name
-)
-pom
-{
-afterEvaluate
-{
-artifactId
-=
-getArtifactId
-(
-)
-}
 url
 =
 '
@@ -4344,9 +4233,15 @@ https
 :
 /
 /
-geckoview
+wiki
 .
-dev
+mozilla
+.
+org
+/
+Mobile
+/
+GeckoView
 '
 licenses
 {
@@ -4512,7 +4407,226 @@ central
 '
 }
 }
+/
+/
+Unfortunately
+Gradle
+does
+not
+provide
+a
+way
+to
+expose
+dependencies
+for
+custom
+/
+/
+project
+types
+like
+Android
+plugins
+.
+So
+we
+need
+to
+add
+them
+manually
+to
+the
+POM
+/
+/
+XML
+here
+or
+use
+a
+plugin
+that
+achieves
+the
+same
+(
+like
+/
+/
+https
+:
+/
+/
+github
+.
+com
+/
+wupdigital
+/
+android
+-
+maven
+-
+publish
+)
+.
+We
+elect
+to
+do
+this
+/
+/
+manually
+since
+our
+dependencies
+are
+simple
+and
+plugins
+increase
+our
+complexity
+/
+/
+surface
+.
+This
+workaround
+can
+be
+removed
+after
+this
+issue
+is
+fixed
+:
+/
+/
+https
+:
+/
+/
+github
+.
+com
+/
+gradle
+/
+gradle
+/
+issues
+/
+1842
+withXml
+{
+def
+dependenciesNode
+=
+asNode
+(
+)
+.
+appendNode
+(
+'
+dependencies
+'
+)
+for
+(
+configurationName
+in
+[
+"
+implementation
+"
+"
+api
+"
+]
+)
+{
+configurations
+.
+getByName
+(
+configurationName
+)
+.
+dependencies
+.
+each
+{
+def
+dependencyNode
+=
+dependenciesNode
+.
+appendNode
+(
+'
+dependency
+'
+)
+dependencyNode
+.
+appendNode
+(
+'
+groupId
+'
+it
+.
+group
+)
+dependencyNode
+.
+appendNode
+(
+'
+artifactId
+'
+it
+.
+name
+)
+dependencyNode
+.
+appendNode
+(
+'
+version
+'
+it
+.
+version
+)
 }
+}
+}
+}
+artifact
+tasks
+[
+"
+bundle
+{
+variant
+.
+name
+.
+capitalize
+(
+)
+}
+Aar
+"
+]
 /
 /
 Javadoc
