--- a/settings.gradle
+++ b/settings.gradle
@@ -212,24 +212,10 @@ exitValue
 0
 )
 {
-logger
-.
-info
+throw
+new
+GradleException
 (
-"
-Error
-running
-.
-/
-mach
-environment
-:
-\
-n
-\
-n
-"
-+
 "
 Process
 '
@@ -255,17 +241,10 @@ exitValue
 \
 n
 \
-n
-"
-+
-"
-stdout
+nstdout
 :
 \
 n
-"
-+
-"
 {
 standardOutput
 .
@@ -276,17 +255,10 @@ toString
 \
 n
 \
-n
-"
-+
-"
-stderr
+nstderr
 :
 \
 n
-"
-+
-"
 {
 standardError
 .
@@ -294,29 +266,6 @@ toString
 (
 )
 }
-"
-)
-throw
-new
-StopExecutionException
-(
-"
-Could
-not
-run
-.
-/
-mach
-environment
-.
-Try
-running
-.
-/
-mach
-build
-first
-.
 "
 )
 }
