Bug 1716290 - Remove protections against the document changing as part of kCharsetFromFinalUserForcedAutoDetection reload. r=emk
Differential Revision: https://phabricator.services.mozilla.com/D123593

UltraBlame original commit: ab805f2926d583986019186024907f5096935606

--- a/docshell/test/browser/browser.ini
+++ b/docshell/test/browser/browser.ini
@@ -329,6 +329,26 @@ sjs
 file_bug1691153
 .
 html
+file_bug1716290
+-
+1
+.
+sjs
+file_bug1716290
+-
+2
+.
+sjs
+file_bug1716290
+-
+3
+.
+sjs
+file_bug1716290
+-
+4
+.
+sjs
 [
 browser_TopLevelNavigationDelegate
 .
@@ -1192,3 +1212,31 @@ js
 https_first_disabled
 =
 true
+[
+browser_bug1716290
+-
+1
+.
+js
+]
+[
+browser_bug1716290
+-
+2
+.
+js
+]
+[
+browser_bug1716290
+-
+3
+.
+js
+]
+[
+browser_bug1716290
+-
+4
+.
+js
+]
