Bug 1724062 Test fission performance on autoland r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D122956

UltraBlame original commit: 66a4fa89f6cd69581218ecc52158867c83c030c6

--- a/taskcluster/ci/test/talos.yml
+++ b/taskcluster/ci/test/talos.yml
@@ -170,115 +170,6 @@ projects
 :
 by
 -
-variant
-:
-fission
-:
-by
--
-test
--
-name
-:
-talos
--
-.
-*
--
-profiling
--
-fis
-:
-[
-]
-talos
--
-tabswitch
--
-fis
-:
-by
--
-test
--
-platform
-:
-macosx1014
-.
-*
-:
-[
-]
-(
-linux1804
--
-64
-|
-windows10
--
-64
-|
-macosx
-.
-*
-)
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-default
-:
-[
-]
-default
-:
-by
--
-test
--
-platform
-:
-(
-linux1804
--
-64
-|
-windows10
--
-64
-|
-macosx
-.
-*
-)
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-default
-:
-[
-]
-default
-:
-by
--
 test
 -
 name
@@ -510,49 +401,6 @@ run
 on
 -
 projects
-:
-by
--
-variant
-:
-fission
-:
-by
--
-test
--
-platform
-:
-(
-linux1804
--
-64
-|
-windows10
--
-64
-|
-macosx
-.
-*
-)
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-default
-:
-[
-]
-default
 :
 by
 -
@@ -983,6 +831,7 @@ opt
 mozilla
 -
 central
+autoland
 ]
 #
 Bug
@@ -1917,6 +1766,7 @@ opt
 mozilla
 -
 central
+autoland
 ]
 default
 :
@@ -2745,49 +2595,6 @@ projects
 :
 by
 -
-variant
-:
-fission
-:
-by
--
-test
--
-platform
-:
-(
-linux1804
--
-64
-|
-windows10
--
-64
-|
-macosx
-.
-*
-)
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-default
-:
-[
-]
-default
-:
-by
--
 test
 -
 platform
@@ -2853,6 +2660,7 @@ default
 mozilla
 -
 central
+autoland
 ]
 max
 -
@@ -3984,49 +3792,6 @@ run
 on
 -
 projects
-:
-by
--
-variant
-:
-fission
-:
-by
--
-test
--
-platform
-:
-(
-linux1804
--
-64
-|
-windows10
--
-64
-|
-macosx1015
--
-64
-)
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-default
-:
-[
-]
-default
 :
 by
 -
