--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -63803,6 +63803,96 @@ mirror
 :
 always
 #
+Controls
+the
+anti
+-
+tracking
+webcompat
+features
+.
+This
+includes
+:
+#
+-
+All
+URL
+-
+Classifier
+and
+state
+partitioning
+skip
+lists
+(
+prefs
+and
+remote
+#
+settings
+)
+#
+-
+Storage
+access
+heuristics
+(
+opener
+redirect
+etc
+.
+)
+#
+-
+StorageAccessAPI
+automatic
+grants
+(
+skips
+the
+prompt
+)
+#
+-
+Allowing
+specific
+tracking
+channels
+on
+user
+opt
+-
+in
+(
+e
+.
+g
+.
+facebook
+login
+#
+shim
+)
+.
+-
+name
+:
+privacy
+.
+antitracking
+.
+enableWebcompat
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+#
 Enable
 the
 heuristic
