Bug 1726865 - Prefer using existing content processes for subframes during process selection, r=farre
Differential Revision: https://phabricator.services.mozilla.com/D123661

UltraBlame original commit: 7fffdb095dd98aabca6db06e6d15c8b1f4b4e766

--- a/dom/ipc/tests/browser.ini
+++ b/dom/ipc/tests/browser.ini
@@ -283,3 +283,23 @@ widget
 "
 gtk
 "
+[
+browser_subframesPreferUsed
+.
+js
+]
+skip
+-
+if
+=
+!
+fission
+#
+Test
+doesn
+'
+t
+make
+sense
+without
+fission
