--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -8047,6 +8047,79 @@ mirror
 :
 always
 #
+Whether
+or
+not
+process
+selection
+for
+subframes
+will
+prefer
+re
+-
+using
+an
+#
+existing
+content
+process
+over
+creating
+a
+new
+one
+.
+Enabling
+this
+pref
+should
+#
+reduce
+the
+number
+of
+processes
+allocated
+for
+non
+-
+first
+-
+party
+domains
+if
+#
+dom
+.
+ipc
+.
+processCount
+.
+webIsolated
+>
+1
+.
+-
+name
+:
+browser
+.
+tabs
+.
+remote
+.
+subframesPreferUsed
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
 When
 this
 pref
