--- a/tools/moztreedocs/requirements.txt
+++ b/tools/moztreedocs/requirements.txt
@@ -78,7 +78,7 @@ sphinx
 attrs
 =
 =
-20
+21
 .
 2
 .
@@ -90,7 +90,7 @@ hash
 =
 sha256
 :
-26b54ddbbb9ee1d34d5d3668dd37d6cf74990ab23c828c2888dccdceee395594
+149e90d6d8ac20db7a955ad60cf0e6881a3f20d37096140088356da6c716b0b1
 \
 -
 -
@@ -98,7 +98,7 @@ hash
 =
 sha256
 :
-fce7fc47dfc976152e82d53ff92fa0407700c21acd20886a13777a0d20e655dc
+ef6aaac3ca6cd92904cdd0d83f629a15f18053ec84e6432106f7a4d04ae4f5fb
 #
 via
 jsonschema
@@ -314,6 +314,14 @@ colorama
 4
 .
 4
+\
+-
+-
+hash
+=
+sha256
+:
+5941b2b48a20143d2267e95b1c2a7603ce057ee39fd88e7329b0c292aa16869b
 \
 -
 -
@@ -833,6 +841,22 @@ hash
 =
 sha256
 :
+195d7d2c4fbb0ee8139a6cf67194f3973a6b3042d742ebe0a9ed36d8b6f0c07f
+\
+-
+-
+hash
+=
+sha256
+:
+22c178a091fc6630d0d045bdb5992d2dfe14e3259760e713c490da5323866c39
+\
+-
+-
+hash
+=
+sha256
+:
 24982cc2533820871eba85ba648cd53d8623687ff11cbb805be4ff7b4c971aff
 \
 -
@@ -842,6 +866,22 @@ hash
 sha256
 :
 29872e92839765e546828bb7754a68c418d927cd064fd4708fab9fe9c8bb116b
+\
+-
+-
+hash
+=
+sha256
+:
+2beec1e0de6924ea551859edb9e7679da6e4870d32cb766240ce17e0a0ba2014
+\
+-
+-
+hash
+=
+sha256
+:
+3b8a6499709d29c2e2399569d96719a1b21dcd94410a586a18526b143ec8470f
 \
 -
 -
@@ -913,6 +953,22 @@ hash
 =
 sha256
 :
+6f1e273a344928347c1290119b493a1f0303c52f5a5eae5f16d74f48c15d4a85
+\
+-
+-
+hash
+=
+sha256
+:
+6fffc775d90dcc9aed1b89219549b329a9250d918fd0b8fa8d93d154918422e1
+\
+-
+-
+hash
+=
+sha256
+:
 717ba8fe3ae9cc0006d7c451f0bb265ee07739daf76355d06366154ee68d221e
 \
 -
@@ -937,6 +993,22 @@ hash
 =
 sha256
 :
+7fed13866cf14bba33e7176717346713881f56d9d2bcebab207f7a036f41b850
+\
+-
+-
+hash
+=
+sha256
+:
+84dee80c15f1b560d55bcfe6d47b27d070b4681c699c572af2e3c7cc90a3b8e0
+\
+-
+-
+hash
+=
+sha256
+:
 88e5fcfb52ee7b911e8bb6d6aa2fd21fbecc674eadd44118a9cc3863f938e735
 \
 -
@@ -946,6 +1018,14 @@ hash
 sha256
 :
 8defac2f2ccd6805ebf65f5eeb132adcf2ab57aa11fdf4c0dd5169a004710e7d
+\
+-
+-
+hash
+=
+sha256
+:
+98bae9582248d6cf62321dcb52aaf5d9adf0bad3b40582925ef7c7f0ed85fceb
 \
 -
 -
@@ -977,6 +1057,22 @@ hash
 =
 sha256
 :
+a6a744282b7718a2a62d2ed9d993cad6f5f585605ad352c11de459f4108df0a1
+\
+-
+-
+hash
+=
+sha256
+:
+acf08ac40292838b3cbbb06cfe9b2cb9ec78fce8baca31ddb87aaac2e2dc3bc2
+\
+-
+-
+hash
+=
+sha256
+:
 ade5e387d2ad0d7ebf59146cc00c8044acbd863725f887353a10df825fc8ae21
 \
 -
@@ -1001,7 +1097,23 @@ hash
 =
 sha256
 :
+b1dba4527182c95a0db8b6060cc98ac49b9e2f5e64320e2b56e47cb2831978c7
+\
+-
+-
+hash
+=
+sha256
+:
 b2051432115498d3562c084a49bba65d97cf251f5a331c64a12ee7e04dacc51b
+\
+-
+-
+hash
+=
+sha256
+:
+b7d644ddb4dbd407d31ffb699f1d140bc35478da613b441c582aeb7c43838dd8
 \
 -
 -
@@ -1017,7 +1129,23 @@ hash
 =
 sha256
 :
+bf5aa3cbcfdf57fa2ee9cd1822c862ef23037f5c832ad09cfea57fa846dec193
+\
+-
+-
+hash
+=
+sha256
+:
 c8716a48d94b06bb3b2524c2b77e055fb313aeb4ea620c8dd03a105574ba704f
+\
+-
+-
+hash
+=
+sha256
+:
+caabedc8323f1e93231b52fc32bdcde6db817623d33e100708d9a68e1f53b26b
 \
 -
 -
@@ -1041,6 +1169,30 @@ hash
 =
 sha256
 :
+d53bc011414228441014aa71dbec320c66468c1030aae3a6e29778a3382d96e5
+\
+-
+-
+hash
+=
+sha256
+:
+d73a845f227b0bfe8a7455ee623525ee656a9e2e749e4742706d80a6065d5e2c
+\
+-
+-
+hash
+=
+sha256
+:
+d9be0ba6c527163cbed5e0857c451fcd092ce83947944d6c14bc95441203f032
+\
+-
+-
+hash
+=
+sha256
+:
 e249096428b3ae81b08327a63a485ad0878de3fb939049038579ac0ef61e17e7
 \
 -
@@ -1050,6 +1202,14 @@ hash
 sha256
 :
 e8313f01ba26fbbe36c7be1966a7b7424942f670f38e666995b88d012765b9be
+\
+-
+-
+hash
+=
+sha256
+:
+feb7b34d6325451ef96bc0e36e1a6c0c1c64bc1fbec4b854f4529e51887b1621
 #
 via
 #
@@ -1299,9 +1459,9 @@ pyrsistent
 =
 0
 .
-17
+18
 .
-3
+0
 \
 -
 -
@@ -1309,7 +1469,167 @@ hash
 =
 sha256
 :
-2e636185d9eb976a18a8a8e96efce62f2905fea90041958d8cc2a189756ebf3e
+097b96f129dd36a8c9e33594e7ebb151b1515eb52cceb08474c10a5479e799f2
+\
+-
+-
+hash
+=
+sha256
+:
+2aaf19dc8ce517a8653746d98e962ef480ff34b6bc563fc067be6401ffb457c7
+\
+-
+-
+hash
+=
+sha256
+:
+404e1f1d254d314d55adb8d87f4f465c8693d6f902f67eb6ef5b4526dc58e6ea
+\
+-
+-
+hash
+=
+sha256
+:
+48578680353f41dca1ca3dc48629fb77dfc745128b56fc01096b2530c13fd426
+\
+-
+-
+hash
+=
+sha256
+:
+4916c10896721e472ee12c95cdc2891ce5890898d2f9907b1b4ae0f53588b710
+\
+-
+-
+hash
+=
+sha256
+:
+527be2bfa8dc80f6f8ddd65242ba476a6c4fb4e3aedbf281dfbac1b1ed4165b1
+\
+-
+-
+hash
+=
+sha256
+:
+58a70d93fb79dc585b21f9d72487b929a6fe58da0754fa4cb9f279bb92369396
+\
+-
+-
+hash
+=
+sha256
+:
+5e4395bbf841693eaebaa5bb5c8f5cdbb1d139e07c975c682ec4e4f8126e03d2
+\
+-
+-
+hash
+=
+sha256
+:
+6b5eed00e597b5b5773b4ca30bd48a5774ef1e96f2a45d105db5b4ebb4bca680
+\
+-
+-
+hash
+=
+sha256
+:
+73ff61b1411e3fb0ba144b8f08d6749749775fe89688093e1efef9839d2dcc35
+\
+-
+-
+hash
+=
+sha256
+:
+772e94c2c6864f2cd2ffbe58bb3bdefbe2a32afa0acb1a77e472aac831f83427
+\
+-
+-
+hash
+=
+sha256
+:
+773c781216f8c2900b42a7b638d5b517bb134ae1acbebe4d1e8f1f41ea60eb4b
+\
+-
+-
+hash
+=
+sha256
+:
+a0c772d791c38bbc77be659af29bb14c38ced151433592e326361610250c605b
+\
+-
+-
+hash
+=
+sha256
+:
+b29b869cf58412ca5738d23691e96d8aff535e17390128a1a52717c9a109da4f
+\
+-
+-
+hash
+=
+sha256
+:
+c1a9ff320fa699337e05edcaae79ef8c2880b52720bc031b219e5b5008ebbdef
+\
+-
+-
+hash
+=
+sha256
+:
+cd3caef37a415fd0dae6148a1b6957a8c5f275a62cca02e18474608cb263640c
+\
+-
+-
+hash
+=
+sha256
+:
+d5ec194c9c573aafaceebf05fc400656722793dac57f254cd4741f3c27ae57b4
+\
+-
+-
+hash
+=
+sha256
+:
+da6e5e818d18459fa46fac0a4a4e543507fe1110e808101277c5a2b5bab0cd2d
+\
+-
+-
+hash
+=
+sha256
+:
+e79d94ca58fcafef6395f6352383fa1a76922268fa02caa2272fff501c2fdc78
+\
+-
+-
+hash
+=
+sha256
+:
+f3ef98d7b76da5eb19c37fda834d50262ff9167c65658d1d8f974d2e4d90676b
+\
+-
+-
+hash
+=
+sha256
+:
+f4c8cabb46ff8e5d61f56a037974228e978f26bfefce4f61a4b1ac0ba7a2ab72
 #
 via
 jsonschema
@@ -1453,6 +1773,14 @@ hash
 =
 sha256
 :
+6034f55dab5fea9e53f436aa68fa3ace2634918e8b5994d82f3621c04ff5ed2e
+\
+-
+-
+hash
+=
+sha256
+:
 69f00dca373f240f842b2931fb2c7e14ddbacd1397d57157a9b005a6a9942648
 \
 -
@@ -1486,6 +1814,14 @@ hash
 sha256
 :
 95f71d2af0ff4227885f7a6605c37fd53d3a106fcab511b8860ecca9fcf400ee
+\
+-
+-
+hash
+=
+sha256
+:
+ad9c67312c84def58f3c04504727ca879cb0013b2517c85a9a253f0cb6380c0a
 \
 -
 -
@@ -1789,11 +2125,11 @@ sentry
 sdk
 =
 =
-0
-.
-14
+1
 .
 3
+.
+1
 \
 -
 -
@@ -1801,7 +2137,7 @@ hash
 =
 sha256
 :
-23808d571d2461a4ce3784ec12bbee5bdb8c026c143fe79d36cef8a6d653e71f
+ebe99144fa9618d4b0e7617e7929b75acd905d258c3c779edcd34c0adfffe26c
 \
 -
 -
@@ -1809,7 +2145,7 @@ hash
 =
 sha256
 :
-bb90a4e19c7233a580715fc986cc44be2c48fc10b31e71580a2037e1c94b6950
+f33d34c886d0ba24c75ea8885a8b3a172358853c7cbde05979fc99c29ef7bc52
 #
 via
 -
@@ -2083,7 +2419,7 @@ hash
 =
 sha256
 :
-c5f423a018aed9447aad1fbbada32c21c7565183aaf2da3c7fdb7bf4dffa3a0b
+722b70a3a14156b6777cf04920d015215eb65b9dfde5cc72f430763ff5e84173
 #
 via
 -
